@@ -64,13 +64,6 @@
 	TARGET_USE_LOCAL_THUNK_ALIAS_P (function) functions into the same
 	comdat group as the thunk target.
 
-2004-12-28  Jakub Jelinek  <jakub@redhat.com>
-
-	PR c++/18384, c++/18327
-	* decl.c (reshape_init_array): Use UHWI type for max_index_cst
-	and index.  Convert max_index to size_type_node if it isn't
-	host_integerp (, 1).
-
 2005-02-24  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>
 
 	* call.c, class.c, cp-tree.h, decl2.c, error.c, init.c, mangle.c,
